--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Sep 06 09:31:42 PDT 2020
+#Fri Sep 11 16:52:32 BST 2020
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
