--- a/paper.yml
+++ b/paper.yml
@@ -75,6 +75,7 @@ messages:
     flying-vehicle: Flying is not enabled on this server
 world-settings:
   default:
+    zombies-target-turtle-eggs: true
     parrots-are-unaffected-by-player-movement: false
     disable-explosion-knockback: false
     keep-spawn-loaded: true
