--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Sep 17 20:04:26 BST 2020
+#Fri Sep 18 08:29:14 PDT 2020
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -41,12 +41,12 @@ spawn-animals=true
 white-list=false
 rcon.password=
 generate-structures=true
-online-mode=false
 max-build-height=256
+online-mode=false
 level-seed=
-prevent-proxy-connections=false
 use-native-transport=true
+prevent-proxy-connections=false
 enable-jmx-monitoring=false
-motd=A Minecraft Server
-rate-limit=0
 enable-rcon=false
+rate-limit=0
+motd=A Minecraft Server
