COmmit from paperspace

--- a/plugins/OpenInv/config.yml
+++ b/plugins/OpenInv/config.yml
@@ -5,3 +5,4 @@ settings:
 toggles:
   silent-chest:
     dcf50728-af3a-326b-be3c-e4a237a5bc04: false
+    40fb5ec1-3c88-3f7b-9a47-f37fe5bbf4c5: false
