--- a/paper.yml
+++ b/paper.yml
@@ -5,7 +5,7 @@
 # If you need help with the configuration or have any questions related to Paper,
 # join us in our Discord or IRC channel.
 # 
-# Discord: https://paperdiscord.emc.gs
+# Discord: https://discord.gg/papermc
 # IRC: #paper @ irc.spi.gt ( http://irc.spi.gt/iris/?channels=paper )
 # Website: https://papermc.io/ 
 # Docs: https://paper.readthedocs.org/ 
@@ -13,6 +13,7 @@
 verbose: false
 config-version: 20
 settings:
+  track-plugin-scoreboards: false
   max-joins-per-tick: 3
   load-permissions-yml-before-plugins: true
   bungee-online-mode: true
@@ -147,6 +148,7 @@ world-settings:
           per-player: false
           day: 5
     anti-xray:
+      lava-obscures: false
       enabled: false
       engine-mode: 1
       max-chunk-section-index: 3
